--- a/templates/report_schedules.html
+++ b/templates/report_schedules.html
@@ -161,7 +161,7 @@
                 </td>
                 <td>
                     {% if schedule.ScheduledTime %}
-                        {{ schedule.ScheduledTime.strftime('%H:%M') }}
+                        {{ schedule.ScheduledTime }}
                     {% else %}
                         -
                     {% endif %}
